@@ -1,7 +1,7 @@
 v1.x.x.x - Unreleased
 ======================
  NEW	: Subtitle delay support (this one does not modify the subtitle file)
- NEW    : Polish, Ukrainian & Italian translations
+ NEW    : Polish, Ukrainian, Italian & Slovak translations
  NEW    : Support for M2TS files with H264, VC1, AC3, DTS, LPCM
  CHANGED: Improved support for audio and subtitle switching with internal Mpeg splitter.
  CHANGED: Size shrink for translation DLLs
@@ -24,6 +24,7 @@ v1.x.x.x - Unreleased
  FIXED  : Random crash with EVR custom
  FIXED  : Macroblocks with nVidia card (appear on H264 streams with custom quantitization matrix) 
  FIXED  : Access violation using VSFilter as AviSynth plugin
+ FIXED  : Some H264 streams was not recognized by internal Mpeg splitter (PPS and SPS present on differents packets)
 
 v1.1.0.0 - 6.March 2008
 ======================
